@startuml

title __CHESSAPPLICATION's Class Diagram__\n

    class Bishop {
    +
    }


    class Chess {
    }


    class ChessBoard {
    }


    class King {
    }


    class Knight {
    }

    class Pawn {
    }


    enum PieceType {
    }


    class Queen {
    }


    class Rook {
    }

  

  Bishop -up-|> ChessPiece
  Chess .up.|> java.awt.event.MouseListener
  Chess -up-|> GraphicsProgram
  Chess o-- ChessBoard : board
  ChessBoard -up-|> DrawableObject
  King -up-|> ChessPiece
  Knight -up-|> ChessPiece
  Pawn -up-|> ChessPiece
  Queen -up-|> ChessPiece
  Rook -up-|> ChessPiece


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
